add humanlike pointer, scrolling, and typing
